src/objects/ExpoHrInfo__c.object
<CustomObject>
    <fields>
        <fullName>ExpoAccSkillLst__c</fullName>
        <label>スキル(経理)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SD01</fullName>
                    <label>簿記を活かす</label>
                </value>
                <value>
                    <fullName>SD02</fullName>
                    <label>仕訳業務</label>
                </value>
                <value>
                    <fullName>SD03</fullName>
                    <label>決算業務</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoDayWorkBegTimeLst__c</fullName>
        <label>始業時間</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_DayWorkTime</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoDayWorkEndTimeLst__c</fullName>
        <label>終業時間</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_DayWorkTime</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoDispatchScopeLst__c</fullName>
        <description>EXPOの人材情報利用</description>
        <label>派遣期間</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KA01</fullName>
                    <label>長期(3ヶ月以上)</label>
                </value>
                <value>
                    <fullName>KA02</fullName>
                    <label>短期</label>
                </value>
                <value>
                    <fullName>KA03</fullName>
                    <label>期間限定</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoEngSkillLst__c</fullName>
        <label>スキル(英語)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SB01</fullName>
                    <label>基礎レベル</label>
                </value>
                <value>
                    <fullName>SB02</fullName>
                    <label>日常会話レベル</label>
                </value>
                <value>
                    <fullName>SB03</fullName>
                    <label>ビジネス会話レベル</label>
                </value>
                <value>
                    <fullName>SB04</fullName>
                    <label>ネイティブレベル</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoHrOtherLst__c</fullName>
        <label>その他</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SF01</fullName>
                    <label>未経験者歓迎</label>
                </value>
                <value>
                    <fullName>SF02</fullName>
                    <label>実務経験者</label>
                </value>
                <value>
                    <fullName>SF03</fullName>
                    <label>寮社宅あり</label>
                </value>
                <value>
                    <fullName>SF04</fullName>
                    <label>食事手当あり</label>
                </value>
                <value>
                    <fullName>SF05</fullName>
                    <label>夜勤なし</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoLicSkillLst__c</fullName>
        <label>免許・資格</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SE01</fullName>
                    <label>レストランサービス技能士</label>
                </value>
                <value>
                    <fullName>SE02</fullName>
                    <label>自動車免許</label>
                </value>
                <value>
                    <fullName>SE03</fullName>
                    <label>サービス接遇</label>
                </value>
                <value>
                    <fullName>SE04</fullName>
                    <label>ボイラー取扱技能</label>
                </value>
                <value>
                    <fullName>SE05</fullName>
                    <label>マナー・プロトコール</label>
                </value>
                <value>
                    <fullName>SE06</fullName>
                    <label>ブライダルプランナー</label>
                </value>
                <value>
                    <fullName>SE07</fullName>
                    <label>接客サービスマナー</label>
                </value>
                <value>
                    <fullName>SE08</fullName>
                    <label>販売士（リテールマーケティング）</label>
                </value>
                <value>
                    <fullName>SE09</fullName>
                    <label>調理師免許</label>
                </value>
                <value>
                    <fullName>SE10</fullName>
                    <label>美容師免許</label>
                </value>
                <value>
                    <fullName>SE11</fullName>
                    <label>調理補助</label>
                </value>
                <value>
                    <fullName>SE12</fullName>
                    <label>栄養士免許</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoMaxPayLst__c</fullName>
        <label>給料（上限）</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WorkPayType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>G_PayRankLst</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoMinPayLst__c</fullName>
        <label>給料（下限）</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WorkPayType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>G_PayRankLst</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoOaSkillLst__c</fullName>
        <label>スキル(OA)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SA01</fullName>
                    <label>Wordを活かす</label>
                </value>
                <value>
                    <fullName>SA02</fullName>
                    <label>Excel 基礎レベル</label>
                </value>
                <value>
                    <fullName>SA03</fullName>
                    <label>Excel 実務レベル</label>
                </value>
                <value>
                    <fullName>SA04</fullName>
                    <label>Excel 上級レベル</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoOrgInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expo組織情報</label>
        <referenceTo>ExpoOrgInfo__c</referenceTo>
        <relationshipLabel>EXPO人材属性情報</relationshipLabel>
        <relationshipName>ExpoOrgInfoRefForHr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpoOthLangSkillLst__c</fullName>
        <label>スキル(その他語)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SC01</fullName>
                    <label>中国語</label>
                </value>
                <value>
                    <fullName>SC02</fullName>
                    <label>韓国語</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoOvertimeWorkHourLst__c</fullName>
        <label>残業時間</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KC01</fullName>
                    <label>残業なし</label>
                </value>
                <value>
                    <fullName>KC02</fullName>
                    <label>残業20時間未満</label>
                </value>
                <value>
                    <fullName>KC03</fullName>
                    <label>残業20時間以上</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpoWeekWorkDaysLst__c</fullName>
        <label>勤務日数</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KB01</fullName>
                    <label>週5日勤務</label>
                </value>
                <value>
                    <fullName>KB02</fullName>
                    <label>週4日勤務</label>
                </value>
                <value>
                    <fullName>KB03</fullName>
                    <label>週3日以下勤務</label>
                </value>
                <value>
                    <fullName>KB04</fullName>
                    <label>自由シフト</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkPayType__c</fullName>
        <label>給料の支払い方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>日給</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>時給</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EXPO人材属性情報</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>HR{YYYY}-{0000}</displayFormat>
        <label>人材No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>